# github_etl_demo

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
config/: github.yaml  pipeline.yaml
config/schemas/: repositories.yaml
connectors/: __init__.py
connectors/database/: __init__.py  loader.py
connectors/github/: __init__.py  client.py  mock_data.py  pull_requests.py  reviews.py
connectors/github/graphql/: __init__.py  client.py
dagster_etl/: __init__.py  definitions.py
dagster_etl/assets/: __init__.py
dagster_etl/jobs/: __init__.py  github_pipeline.py
dagster_etl/resources/: __init__.py  github_resource.py  postgres_resource.py
dagster_etl/schedules/: __init__.py  daily_github.py
docker/dagster/: Dockerfile
docker/postgres/: init.sql
docs/: strategic_plan.docx
models/: __init__.py
models/dimensions/: dim_date.sql  dim_repositories.sql  dim_users.sql
models/facts/: fact_daily_repo_metrics.sql  fact_pull_requests.sql  fact_reviews.sql
models/staging/: raw_tables.sql
models/views/: vw_daily_metrics.sql  vw_pull_requests.sql  vw_reviews.sql
scripts/: init_db.py  load_full_demo.py  test_load.py  test_mock_data.py  test_transformers.py
tests/: __init__.py
tests/connectors/: __init__.py
tests/transformers/: __init__.py
tests/validators/: __init__.py
transformers/: __init__.py
transformers/github/: __init__.py  dimensions.py  pull_requests.py  reviews.py
validators/: __init__.py
validators/github/: __init__.py  pull_requests.py  reviews.py
(+22 files in other folders)
